# CDTB

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ComparedDownloadTimes.txt  Downloader-Multithread.py  Downloader.js  Downloader.py  PULL_REQUEST_TEMPLATE.md  README.md  __init__.py  checkpatch.py  clientcorrelator.py  downloader-with-wad-decomp.py  downloader.py  extract_client_metadata.py  package.json  pyproject.toml  requirements.txt  tft.py
.metadata/: version.ini
LoLPatcher/: .classpath  .project
cdragontoolbox/: __init__.py  __main__.py  arenadata.py  binfile.py  data.py  downloader.py  export.py  hashes.bin.txt  hashes.binentries.txt  hashes.binfields.txt  hashes.binhashes.txt  hashes.bintypes.txt  hashes.lcu.txt  hashes.py  hashes.rst.txt  hashes.txt  patcher.py  rads.py  rstfile.py  sknfile.py  storage.py  tftdata.py  tools.py  wad.py
cdtb/: __init__.py  __main__.py  arenadata.py  augmentdata.py  binfile.py  data.py  export.py  hashes.py  patcher.py  rads.py  rstfile.py  sknfile.py  storage.py  strawberry.py  tftdata.py  tools.py  wad.py
client_and_release_version_correlation/: README.md  extract_client_metadata.py  version_conversion.json
clientcorrelator/: __init__.py  clientcorrelator.py  correlator.py  functions.py
config/: ProjectList  RegionList
correlator/: __init__.py
examples/: run_correlator_on_all_versions.py
node-binary-file-fs-fix/: README.md  index.js  package.json
parser/: parser.py
tests/: conftest.py  test_cli.py  test_downloader.py  test_export.py  test_rads.py  test_storage.py  tools.py
(+112 files in other folders)
